test/tests/errors/error-valof-return-no-valof-proc.sm
// true
// false
/**/
/**/

program {
    proc x(y){
        return y;
    }

    output valof {
        x(1);
    };
}